# typer-example

./: README.md  pyproject.toml
typer_example/: main.py
