[tool.poetry]
name = "typer-example"
version = "0.1.0"
description = ""
authors = ["kevinr-electric <kevin.rathbun@electric.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
cli = "typer_example.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
